--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,17 @@ footer {
 
   #column-1 {
     background-color:#5f9ea0;
+    width: 50%;
   }
 
   #column-2 {
     background-color:#ff7f50;
+     width: 50%;
   }
 
   #column-3 {
     background-color:#d2691e ;
+     width: 100%;
   }
 
   footer {
@@ -90,14 +93,17 @@ footer {
 
   #column-1 {
     background-color:#00ffff ;
+    width: 33.33%;
   }
 
   #column-2 {
     background-color:#B8860B ;
+        width: 33.33%;
   }
 
   #column-3 {
     background-color:#008B8B ;
+        width: 33.33%;
   }
 
   footer {
